[package]
name = "musig2-over-websockets"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
futures = "0.3.31"
hex = "0.4.3"
musig2 = "0.2.3"
rand = "0.9.0"
secp256k1 = "0.30.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-tungstenite = "0.26.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
